# XillybusHostAPI

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Server.h  Task.h  TaskManager.h  TaskPool.h  XillybusManager.h  headers.h
src/: Server.cpp  Task.cpp  TaskPool.cpp  XillybusManager.cpp  main.cpp
